Fixed number alignment

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ Sidebar styling
 }
 
 #times2 {
-	top: 230px;
+	top: 240px;
 }
 
 .checkpoint p {
@@ -37,10 +37,6 @@ Sidebar styling
 	font-size: 2.5em;
 	font-weight: 400;
 	transition: all .8s ease;
-}
-
-.post:hover .checkpoint h3 {
-	color: rgb(80,150,198);
 }
 
 .fa {
